# zypher

./: .gitignore  README.md  package-lock.json
aegis-protocol/: Anchor.toml  Cargo.toml  fix_config.sh  package-lock.json  package.json  tsconfig.json
aegis-protocol-app/: app.json  package-lock.json  package.json
aegis-protocol/migrations/: deploy.ts
aegis-protocol/programs/aegis-protocol/: Cargo.toml
aegis-protocol/programs/aegis-protocol/src/: cdp.rs  errors.rs  lib.rs  oracle_integration.rs  prediction_market.rs  privacy_utils.rs  zk_circuits.rs
aegis-protocol/scripts/: fix_config.ts  init_config.ts
aegis-protocol/tests/: aegis-protocol.ts
frontend/frontend-scripts/: fetch-idl.ts  initialize-config.ts
frontend/zypherweb/: QUICK_START.md  README.md  middleware.ts  next.config.ts  package-lock.json  package.json  tailwind.config.ts
frontend/zypherweb/app/: globals.css  layout.tsx  page.tsx
frontend/zypherweb/app/api/agent/: route.ts
frontend/zypherweb/app/create-market/: page.tsx
frontend/zypherweb/app/dashboard/: page.tsx
frontend/zypherweb/app/mint/: page.tsx
frontend/zypherweb/app/wallet/: page.tsx
frontend/zypherweb/components/: AboutSection.tsx  CTASection.tsx  CreateMarketForm.tsx  EcosystemSection.tsx  GlassCard.tsx  GradientButton.tsx  HedgeDashboard.tsx  HeroSection.tsx  MintForm.tsx  Navigation.tsx  NeonDivider.tsx  ParticleBackground.tsx  ProtectedRoute.tsx  TechnologySection.tsx  ThreeDPreview.tsx  WalletConnect.tsx  WalletContextProvider.tsx
frontend/zypherweb/lib/: solana.ts
frontend/zypherweb/public/idl/: zypher.json
frontend/zypherweb/public/models/equity_token/: license.txt  scene.gltf
frontend/zypherweb/scripts/: close-config.ts  close-pda.ts  initialize-config.ts  initialize-vault.ts  mint-test-collateral.ts  read-config.ts  reinit-with-real-oracles.ts  update-oracles.ts
offchain/agents/: agent.py  agent_model.pth  config.json  dummy_data.csv  initialize_config.py  requirements.txt
zypher/: Anchor.toml  package-lock.json  package.json
zypher/migrations/: deploy.ts
zypher/programs/zypher/: Cargo.toml
zypher/programs/zypher/src/: cdp.rs  errors.rs  lib.rs  oracle_integration.rs  prediction_market.rs  privacy_utils.rs  zk_circuits.rs
zypher/scripts/: create_markets.ts  reinit_config.ts
zypher/tests/: zypher.ts
