[package]
name = "aegis-protocol"
version = "0.1.0"
description = "Privacy-preserving CDP system with ZK prediction markets"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "aegis_protocol"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.30.1"
anchor-spl = "0.30.1"
solana-program = "1.18.0"
pyth-sdk-solana = "0.8.0"

# ZK proof dependencies (placeholder - halo2 integration would go here)
# In production, uncomment and configure:
# halo2 = { git = "https://github.com/zcash/halo2", branch = "main" }
# poseidon-hash = "0.1.0"

# Compression for large account data
# solana-compression = "0.1.0"

[dev-dependencies]
solana-program-test = "1.18.0"
solana-sdk = "1.18.0"
spl-token = "4.0.0"