[package]
name = "aegis-protocol"
version = "0.1.0"
description = "Privacy-preserving CDP system with ZK prediction markets"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "aegis_protocol"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = { version = "0.32.1", features = ["init-if-needed"] }
anchor-spl = "0.32.1"
pyth-sdk-solana = "0.10.6"
solana-poseidon = "3.0.6"


# ZK proof dependencies (placeholder - halo2 integration would go here)
# In production, uncomment and configure:
# halo2 = { git = "https://github.com/zcash/halo2", branch = "main" }
# poseidon-hash = "0.1.0"

# Compression for large account data
# solana-compression = "0.1.0"

[dev-dependencies]
solana-program-test = "3.0.6"
solana-sdk = "3.0.0"
spl-token = "4.0.0"